        Enum TreeDecompositionAlg:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., TD_UPPER) have been
              renamed as scoped enum values (e.g., TreeDecompositionAlg::Upper).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class Triangulation<dim>:
            - New routines hasLocks(), lockBoundary(), and unlockAll(), to
              work with locked top-dimensional simplices and their facets.
            - New routine reorderBFS(), which essentially makes the old
              Triangulation<3>::reorderTetrahedraBFS() available in all
              dimensions.
            - New routine randomiseLabelling().
            - New routine hash(), which uses the tight encoding.
            - New routines dot() and writeDot().
            - New alias sig(), which is is identical to isoSig().
            - Renamed dumpConstruction() to source(), and extended it to produce
              either C++ and Python code via an optional language argument.
              The old C++-only dumpConstruction() is kept but deprecated.
            - Added a variant of insertTriangulation() that takes an rvalue
              reference (alongside the original which takes a const reference).
            - The two-argument copy constructor is now a three-argument
              copy constructor, giving an additional boolean option for
              whether to clone simplex/facet locks.
            - Replaced makeDoubleCover() with doubleCover(), which returns the
              result as a new triangulation.  The old routine is kept but
              deprecated.
            - Renamed simplifiedFundamentalGroup to setGroupPresentation().
              The old name is deprecated but kept for backwards compatibility.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.